<resources>
    <string name="app_name">RentalServices</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Menu item texts -->
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_cart">Cart</string>
    <string name="action_wishlist">Wishlist</string>

    <string name="item_1">Solar</string>
    <string name="item_2">HVAC</string>
    <string name="item_3">Smart Lighting</string>
    <string name="item_4">Window Film</string>

    <string name="my_profile">My Profile</string>
    <string name="my_rewards">My Rewards</string>
    <string name="my_orders">My Orders</string>
    <string name="my_cart">My Cart</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="my_account">My Account</string>
    <string name="my_payment">Payment</string>

    <string name="my_products">Add Products</string>

    <string name="help_support">Help \u0026 Support</string>
    <string name="contact_us">Contact Us</string>
    <string name="terms_conditions">Help Center</string>
    <string name="reviews">Reviews</string>
    <string name="help_center">Logout</string>

    <string name="search_hint">Search for Energy Solutions, Rental Services and More</string>


    <!--Intro slider texts -->
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Energy Solutions!</string>
    <string name="slide_1_desc">The easiest way to make your environment energy efficient!
    </string>

    <string name="slide_2_title">Rentals</string>
    <string name="slide_2_desc">Rent services from anywhere, anytime!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">Smart City</string>
    <string name="slide_4_desc">Rent our services and contribute to a smart and green environment!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome
        slider -> clear data
    </string>
    <string name="play_again">Play Again</string>
</resources>
