<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_item1"
            android:icon="@drawable/solar"
            android:title="@string/item_1" />
        <item
            android:id="@+id/nav_item2"
            android:icon="@drawable/hvac"
            android:title="@string/item_2" />
        <item
            android:id="@+id/nav_item3"
            android:icon="@drawable/lig"
            android:title="@string/item_3" />
        <item
            android:id="@+id/nav_item4"
            android:icon="@drawable/window"
            android:title="@string/item_4" />
    </group>

    <item android:title="@string/my_profile">
        <menu>
            <item
                android:id="@+id/my_orders"
                android:icon="@drawable/ic_shopping_basket_black_24dp"
                android:title="@string/my_orders" />
            <item
                android:id="@+id/my_cart"
                android:icon="@drawable/ic_shopping_cart_black_24dp"
                android:title="@string/my_cart" />
            <item
                android:id="@+id/my_wishlist"
                android:icon="@drawable/ic_favorite_black_24dp"
                android:title="@string/my_wishlist" />
        </menu>
    </item>

    <item android:title="@string/help_support">
        <menu>
            <item
                android:id="@+id/contact_us"
                android:title="@string/contact_us" />
            <item
                android:id="@+id/feedback"
                android:title="@string/terms_conditions" />
            <item
                android:id="@+id/reviews"
                android:title="@string/reviews" />
            <item
                android:id="@+id/help_center"
                android:title="@string/help_center" />
        </menu>
    </item>

</menu>
