<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/my_profile">
        <menu>
            <item
                android:id="@+id/my_products"
                android:icon="@drawable/ic_shopping_basket_black_24dp"
                android:title="@string/my_products" />
        </menu>
    </item>

    <item android:title="@string/help_support">
        <menu>
            <item
                android:id="@+id/contact_us"
                android:title="@string/contact_us" />
            <item
                android:id="@+id/feedback"
                android:title="@string/terms_conditions" />
            <item
                android:id="@+id/reviews"
                android:title="@string/reviews" />
            <item
                android:id="@+id/help_center"
                android:title="@string/help_center" />
        </menu>
    </item>

</menu>
